added user profiles

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -8,11 +8,11 @@
     </td-navigation-drawer>
 
     <td-layout-nav>
-
+        
         <button mat-icon-button td-menu-button tdLayoutToggle>
             <mat-icon>menu</mat-icon>
         </button>
-        <app-dashboard td-toolbar-content></app-dashboard>
+        <app-dashboard td-toolbar-content class="local-dashboard"></app-dashboard>
         <div class="local-body">
             <!-- 
                 TODO: attach progress bar to toolbar so that it isn't get
