--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -3,6 +3,10 @@
     width: 100%;
 }
 .local {
+    &-dashboard {
+        display: block;
+        width: 100%;
+    }
     &-body {
         height: 100%;
     }
