--- a/frontend/src/app/dashboard/dashboard.component.scss
+++ b/frontend/src/app/dashboard/dashboard.component.scss
@@ -1,6 +1,20 @@
-.dashboard {
+.local {
     &-root {
         margin: 0;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: flex-end;
+        width: 100%;
+    }
+    &-main-nav {
+        align-items: center;
+        display: flex;
+        flex-wrap: wrap;
+        flex-grow: 1;
+        justify-content: flex-start;
+    }
+    &-user-profile {
+        flex-shrink: 1;
     }
 
     &-home-btn {
