--- a/frontend/src/app/common/rating/rating.component.scss
+++ b/frontend/src/app/common/rating/rating.component.scss
@@ -2,10 +2,9 @@
 
 .local {
     &-btn {
-        color: mat-color(map-get($theme, primary))
 
         &--active {
-            color: mat-color(map-get($theme, accent))
+            color: mat-color(map-get($theme, accent));
         }
     }
 }
