--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -1,27 +1,27 @@
 <ng-container *veeLet="client$ | async as client">
 
-<nav layout="row" layout-margin>
 
-
-    <app-dashboard-anchor flex routePath="/" class="dashboard-home-btn" exactMatch>
-        <span class="dashboard-home-btn__text">TaC</span>
-    </app-dashboard-anchor>
-
-
-    <ng-container *appIfClientRole="signInRouteLimit; else elseForNotGuest">
-
-        <app-dashboard-anchor flex routePath="/sign-in">Sign in</app-dashboard-anchor>
-        <app-dashboard-anchor *appIfClientRole="signUpRouteLimit"
-            flex
-            routePath="/sign-up"
-        > Sign up
+<nav class="local-root">
+    <div class="local-main-nav">
+        <app-dashboard-anchor routePath="/" class="local-home-btn" exactMatch>
+            <span class="local-home-btn__text">TaC</span>
         </app-dashboard-anchor>
-        
-    </ng-container>
-    <ng-template #elseForNotGuest>
-        <a mat-button flex (click)="trySignOut()">Sign out</a>
-    </ng-template>
 
+        <ng-container *appIfClientRole="signInRouteLimit; else elseForNotGuest">
+
+            <app-dashboard-anchor routePath="/sign-in">Sign in</app-dashboard-anchor>
+            <app-dashboard-anchor *appIfClientRole="signUpRouteLimit" routePath="/sign-up"> 
+                Sign up
+            </app-dashboard-anchor>
+            
+        </ng-container>
+        <ng-template #elseForNotGuest>
+            <a mat-button (click)="trySignOut()">Sign out</a>
+        </ng-template>
+    </div>
+    <div class="local-user-profile" *ngIf="client != null">
+        <app-dashboard-client-profile></app-dashboard-client-profile>
+    </div>
 </nav>
 
 
