--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -12,11 +12,15 @@ a:hover {
 [ng-reflect-router-link] {
     cursor: pointer;
 }
+html {
+    font-size: 10px; // for better itercation with `rem` units
+}
 
 body, html {
     height: 100%;
     margin: 0;
     padding: 0;
+    font-size: 16px;
 }
 
 // this class is set in `SnackBarService` for all snackbars
