--- a/frontend/src/app/common/pagination/pagination.component.scss
+++ b/frontend/src/app/common/pagination/pagination.component.scss
@@ -1,5 +1,18 @@
-.local-loading {
-    display: block;
-    margin-left:  auto;
-    margin-right: auto;
+.local {
+    &-root {
+        display:        flex;
+        flex-direction: column;
+    }
+    // &-search {
+    //     // width: 20%;
+    // }
+    &-loading {
+        display: block;
+        margin-left:  auto;
+        margin-right: auto;
+    }
+    &-filters {
+        background: inherit;
+        padding-top: 10px;
+    }
 }
