--- a/frontend/src/app/nav-drawer/nav-drawer.component.html
+++ b/frontend/src/app/nav-drawer/nav-drawer.component.html
@@ -14,6 +14,10 @@
     <a routerLink="/media" mat-list-item tdLayoutToggle>
         <mat-icon>photo_gallery</mat-icon>Media
     </a>
+    
+    <a routerLink="/contacts" mat-list-item tdLayoutToggle>
+        <mat-icon>contact_support</mat-icon>Contacts
+    </a>
 
     <mat-expansion-panel>
         <mat-expansion-panel-header>
@@ -39,5 +43,6 @@
         </mat-nav-list>
 
     </mat-expansion-panel>
-    
+
+
 </mat-nav-list>
