--- a/frontend/src/app/media/media.component.html
+++ b/frontend/src/app/media/media.component.html
@@ -1,4 +1,4 @@
-<mat-tab-group>
+<mat-tab-group dynamicHeight>
     <mat-tab>
         <ng-template mat-tab-label>
             <mat-icon class="media-tab-icon">photo</mat-icon>Pictures
