--- a/frontend/src/app/contacts/contacts/contacts.component.html
+++ b/frontend/src/app/contacts/contacts/contacts.component.html
@@ -1,1 +1,17 @@
-Contact us!
+<h1>
+    Contacts us
+</h1>
+<p>
+    Our leading webmaster is currently studing at KPI.
+    You may find him there.
+</p>
+<agm-map 
+    [latitude]="mapMarker.lat" 
+    [longitude]="mapMarker.lng"
+    class="local-map"
+>
+    <agm-marker
+        [latitude]="mapMarker.lat"
+        [longitude]="mapMarker.lng"
+    ></agm-marker>
+</agm-map>
