--- a/frontend/src/app/developer/developer/developer.component.html
+++ b/frontend/src/app/developer/developer/developer.component.html
@@ -8,7 +8,7 @@
     </mat-card-header>
     <figure mat-card-image class="local-promo">
         <img 
-            src="/assets/developer-promo.jpg" 
+            src="/assets/img/developer-promo.jpg" 
             alt="Build tools photo"
             class="local-promo__image"
         >
