--- a/frontend/src/app/footer/footer.component.html
+++ b/frontend/src/app/footer/footer.component.html
@@ -2,11 +2,11 @@
     Contact the leading webmaster
     <a mat-stroked-button href="https://t.me/Veetaha" target="_blank">
         via Telegram
-        <img src="/assets/telegram-logo.png" class="external-site-logo">
+        <img src="/assets/img/telegram-logo.png" class="external-site-logo">
     </a> 
     or 
     <a mat-stroked-button href="https://github.com/veetaha">
         via GitHub
-        <img src="/assets/github-logo.svg" class="external-site-logo"/>
+        <img src="/assets/img/github-logo.svg" class="external-site-logo"/>
     </a>
 </p>
