--- a/frontend/src/app/media/media.component.html
+++ b/frontend/src/app/media/media.component.html
@@ -1,7 +1,7 @@
 <mat-tab-group dynamicHeight>
     <mat-tab>
         <ng-template mat-tab-label>
-            <mat-icon class="media-tab-icon">photo</mat-icon>Pictures
+            <mat-icon class="media-tab-icon">photo</mat-icon>Gallery
         </ng-template>
         <app-media-pictures></app-media-pictures>
     </mat-tab>
