--- a/frontend/src/app/news/news-comment/all-news-comments/paged-news-comment/paged-news-comment.component.scss
+++ b/frontend/src/app/news/news-comment/all-news-comments/paged-news-comment/paged-news-comment.component.scss
@@ -15,7 +15,7 @@
     }
 
     &-last-update-date {
-        color: map-get($theme, muted-text)
+        color: mat-color(map-get($theme, muted-text))
     }
     &-mutate-menu {
         width: 100%;
