--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -1,27 +1,26 @@
 <ng-container *veeLet="client$ | async as client">
-    
+
 
 <nav class="local-root">
-    <div class="local-main-nav">
-        <app-dashboard-anchor routePath="/" class="local-home-btn" exactMatch>
-            <span class="local-home-btn__text">TaC</span>
-        </app-dashboard-anchor>
+    <app-dashboard-anchor routePath="/" class="local-home-btn" exactMatch>
+        <span class="local-home-btn__text">TaC</span>
+    </app-dashboard-anchor>
+    <div class="local-nav">
 
-        <ng-container *appIfClientRole="signInRouteLimit; else elseForNotGuest">
-
+        <ng-container *ngIf="client == null; else elseAuthenticatedClient">
             <app-dashboard-anchor routePath="/sign-in">Sign in</app-dashboard-anchor>
-            <app-dashboard-anchor *appIfClientRole="signUpRouteLimit" routePath="/sign-up"> 
-                Sign up
-            </app-dashboard-anchor>
-            
+            <app-dashboard-anchor routePath="/sign-up">Sign up</app-dashboard-anchor>
         </ng-container>
-        <ng-template #elseForNotGuest>
+        <ng-template #elseAuthenticatedClient>
             <a mat-button (click)="trySignOut()">Sign out</a>
         </ng-template>
+        
     </div>
-    <div class="local-user-profile" *ngIf="client != null">
-        <app-dashboard-client-profile></app-dashboard-client-profile>
-    </div>
+    <app-dashboard-client-profile 
+        *ngIf="client != null" 
+        class="local-user-profile"
+    ></app-dashboard-client-profile>
+
 </nav>
 
 
