--- a/frontend/src/app/footer/footer.component.scss
+++ b/frontend/src/app/footer/footer.component.scss
@@ -1,7 +1,7 @@
 @import 'variables';
 
 .footer-root {
-    background-color: map-get($theme, footer-bgnd);
+    background-color: mat-color(map-get($theme, primary));
     color: white;
     margin: 0;
     text-align: center;
