--- a/frontend/src/app/media/media-pictures/media-pictures.component.scss
+++ b/frontend/src/app/media/media-pictures/media-pictures.component.scss
@@ -1,15 +1,25 @@
 .local {
     &-root {
         display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(330px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(330px, 1fr));
         gap: 30px;
     }
     &-picture {
-        padding: 0;
+        display: flex;
+        justify-content: center;
+        margin: 0;
+        padding: 0;;
         overflow: hidden;
         border-radius: 8px;
+        height: 194.28px;
+
+        &:hover {
+            cursor: pointer;
+        }
+
         &__img {
-            width: 100%;
+            max-width: 100%;
+            max-height: 100%;
         }
     }
     
