--- a/frontend/src/app/media/media-videos/media-videos.component.scss
+++ b/frontend/src/app/media/media-videos/media-videos.component.scss
@@ -1,15 +1,16 @@
-.local-carousel-item {
-    // https://avexdesigns.com/responsive-youtube-embed/
-    position: relative;
-    padding-bottom: 56.25%;
-    width: 100%;
-    overflow: hidden;
-    
-    &__payload {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
+.local {
+    &-root {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(330px, 1fr));
+        gap: 30px;
     }
+    &-video-thumbnail {
+        padding: 0;
+        overflow: hidden;
+        border-radius: 8px;
+        &__img {
+            width: 100%;
+        }
+    }
+    
 }
