--- a/frontend/src/app/user/user-profile/user-profile.component.scss
+++ b/frontend/src/app/user/user-profile/user-profile.component.scss
@@ -7,7 +7,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        background-image: url("/assets/default-user-profile-back.jpg");
+        background-image: url("/assets/img/default-user-profile-back.jpg");
         background-size: cover;
         @include vertical-padding(20px);
     }
@@ -43,6 +43,6 @@
         }
     }
     &-local-time-ago {
-        color: map-get($theme, muted-text);
+        color: mat-color(map-get($theme, muted-text));
     }
 }
