--- a/frontend/src/styles/variables.scss
+++ b/frontend/src/styles/variables.scss
@@ -1,7 +1,7 @@
 @import '~@angular/material/theming';
 
 $typography: mat-typography-config(
-    $font-family: 'Roboto, monospace',
+    $font-family: 'Roboto, sans-serif',
     $headline: mat-typography-level(32px, 48px, 700),
     $body-1: mat-typography-level(16px, 24px, 500)
 );
@@ -12,10 +12,8 @@ $warn:    mat-palette($mat-red);
 
 // Create the theme object (a Sass map containing all of the palettes).
 $theme: map-merge(mat-dark-theme($primary, $accent, $warn), (
-    snack-bar-info:    mat-color($mat-blue, 700), // second argument is required!
-    snack-bar-success: mat-color($mat-green, 500),
-    snack-bar-warning: mat-color($mat-yellow, 500),
-    snack-bar-error:   mat-color($mat-red, 500),
-    footer-bgnd:       mat-color($primary),
-    muted-text:        mat-color($mat-grey, 700)
+    info:        mat-palette($mat-grey,   50), // second argument is required!
+    success:     mat-palette($mat-green,  500),
+    soft-warn:   mat-palette($mat-yellow, 800),
+    muted-text:  mat-palette($mat-grey,   700)
 ));
